# sp1

./: Cargo.toml
book/developers/: recommended-settings.md
book/generating-proofs/: advanced.md  basics.md
book/getting-started/: quickstart.md
book/writing-programs/: inputs-and-outputs.md  precompiles.md
core/: Cargo.toml
core/src/utils/: prove.rs
examples/: Cargo.toml
examples/fibonacci/program/elf/: riscv32im-succinct-zkvm-elf
examples/fibonacci/script/: Cargo.toml
examples/fibonacci/script/src/: lib.rs  main.rs
examples/fibonacci/script/src/common/: mod.rs
examples/fibonacci/script/src/operator/: mod.rs  steps.rs
examples/fibonacci/script/src/scenario/: core_prove.rs
examples/fibonacci/script/src/worker/: mod.rs  steps.rs
ffi/: Cargo.toml  pyproject.toml
ffi/src/: lib.rs
kroma/: Cargo.toml  README.md
kroma/guest-lib/: Cargo.toml
kroma/guest-lib/src/: consts.rs  input.rs  lib.rs  mem_db.rs  output.rs
kroma/guest-lib/src/builder/: finalize.rs  initialize.rs  mod.rs  prepare.rs
kroma/guest-lib/src/builder/execute/: ethereum.rs  mod.rs  optimism.rs
kroma/guest-lib/src/kona_lib/: eip4788.rs  executor.rs  executor_util.rs  mod.rs  mpt_utils.rs  raw_tx.rs
kroma/guest-primitives/: Cargo.toml
kroma/guest-primitives/src/: block.rs  ethers.rs  lib.rs  mmr.rs  receipt.rs
kroma/guest-primitives/src/transactions/: ethereum.rs  mod.rs  optimism.rs  signature.rs
kroma/guest-primitives/src/trie/: mpt.rs
kroma/op-guest/: Cargo.toml
kroma/op-guest/elf/: riscv32im-succinct-zkvm-elf
kroma/op-guest/src/: main.rs
kroma/op-script/: Cargo.toml  build.rs  checkpoint-0  public-values  public-values-stream
kroma/op-script/inputs/: 109279674.txt
kroma/op-script/src/: main.rs
kroma/op-script/src/input_builder/: mod.rs  mpt.rs  preflight.rs  provider_db.rs
mmo/: Cargo.toml
mmo/src/: lib.rs
prover/src/: build.rs  lib.rs
sdk/: Cargo.toml
sdk/src/: action.rs
sdk/src/provers/: local.rs
