[workspace]
exclude = ["op-guest"]
members = ["op-script"]
resolver = "2"

[workspace.dependencies]
alloy-primitives = { version = "0.7.6", default-features = false }
alloy-rlp = { version = "0.3.5", default-features = false }
revm = { git = "https://github.com/bluealloy/revm", rev = "a832a4e", default-features = false }
