[package]
name = "sp1-mmo"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
itertools = "0.12.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = "0.10.8"
anyhow = "1.0.83"
sysinfo = "0.30.13"
alloy-sol-types = "0.7.2"
tempfile = "3.10.1"
bincode = "1.3.3"

sp1-sdk = { workspace = true }
sp1-prover = { workspace = true }
sp1-core = { workspace = true }
p3-baby-bear = { version = "0.1.3-succinct", features = ["nightly-features"] }
p3-symmetric = "0.1.3-succinct"

[build-dependencies]
sp1-helper = { workspace = true }
