[package]
version = "0.1.0"
name = "op-script"
edition = "2021"

[dependencies]
sp1-sdk = { path = "../../sdk" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
tracing = "0.1.40"
guest-lib = { path = "../guest-lib" }
guest-primitives = { path = "../guest-primitives" }

[build-dependencies]
sp1-helper = { path = "../../helper" }

[features]
default = ["plonk"]
plonk = ["sp1-sdk/plonk"]