[package]
version = "0.1.0"
name = "op-script"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.3", features = ["derive"] }
sp1-sdk = { path = "../../sdk" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
tracing = "0.1.40"
guest-lib = { path = "../guest-lib" }
guest-primitives = { path = "../guest-primitives" }
once_cell = "1.18"
anyhow = "1.0"
ethers-core = { version = "2.0", features = ["optimism"] }
ethers-providers = { version = "2.0", features = ["optimism"] }
log = "0.4"
tokio = { version = "1.23", features = ["full"] }
flate2 = "1.0.26"
revm = { workspace = true, features = ["std", "serde", "optimism"] }
hashbrown = { version = "0.14.3", features = ["inline-more"] }

[build-dependencies]
sp1-helper = { path = "../../helper" }

[dev-dependencies]
ctor = "0.2.8"
lazy_static = "1.4.0"
